# fraud-llm-finetune

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
configs/: qlora_config.yaml  training_config.yaml
data/: README.md
data/processed/: test.jsonl  train.jsonl  val.jsonl
data/raw/: sample_fraud_narratives.jsonl
inference/: .dockerignore  Dockerfile  app.py  predict.py  requirements.lock.txt  requirements.txt
notebooks/: 01_data_preparation.ipynb  02_finetune_qlora.ipynb  03_evaluate_model.ipynb  04_merge_and_export.ipynb
results/metrics/: eval_metrics.json  training_metrics.json
scripts/: deploy_demo_cloudrun.sh
src/: __init__.py  config.py  dataset.py  evaluate.py  inference.py  merge.py  train.py
tests/: test_config.py  test_dataset.py  test_inference.py  test_pipeline.py  test_train_compat.py
